watch/style.css
html {
  height: 100%;
  margin: 0px;
  padding: 0px;
}

body {
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin: 0px;
  padding: 0px;
  font-family: Verdana, Arial;
  overflow: hidden;
}

#logo {
  width: 80px;
  height: 60px;
  vertical-align: middle;
  filter: drop-shadow(0px 3px #ccb5e8);
}

#banner {
  width: 100%;
  height: 72px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  background-color: #7d50b5;
  border-bottom: solid 6px #6c0f96;
  color: #FFFFFF;
  padding-left: 16px;
  font-size: 2.3vw;
  text-shadow: 0px 3px #ccb5e8;
}

#banner-text {
  display: inline;
}

#share {
  display: inline;
  width: auto;
  height: 40px;
  padding: 4px;
  outline: none;
  border-radius: 8px;
  text-decoration: underline;
  line-height: 0;
  user-select: all;
  cursor: pointer;
}

.j-form {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  width: 100%;
  font-size: 24px;
  line-height: 25px;
}

small {
  font-size: 12px;
  color: #666666;
}

strong {
  color: #6c0f96;
}

video {
  width: 100%;
  height: 100%;
}

#j-failed, #j-loading {
  font-size: 24px;
  color: #AAAAAA;
}

.join-item {
  width: 80%;
  height: 100%;
}

.text-input {
  width: 95%;
  margin: 0px;
  outline: #777;
  border: 1px solid #DDDDDD;
  border-radius: 5px;
  padding: 5px;
  font-size: 18px;
  align-self: center;
}

.text-input:focus {
  border-color: #6c0f96;
}

.submit-button {
  align-self: center;
  background-color: #a33dd1;
  color: #FFFFFF;
  outline: #DDDDDD;
  width: 150px;
  height: 48px;
  border: none;
  border-bottom: solid 3px #6c0f96;
  border-radius: 8px;
  font-size: 20px;
}

.submit-button:hover {
  transform: scale(1.03);
  cursor: pointer;
}

.submit-button:active {
  background-color: #6c0f96;
  transform: scale(0.98);
}

#room-container {
  width: 100%;
  height: 100%;
  padding: 8px;
  display: none;
}

#window-container {
  width: 100%;
  height: 42vw;
  display: flex;
  flex-direction: row;
}

#video-container {
  width: 75%;
  height: fit-content;
  margin: 8px;
}

#chat-container {
  width: 25%;
  height: auto;
  display: flex;
  flex-direction: column;
  border: solid 1px #DDD;
  margin: 8px;
  margin-left: 0px;
  padding: 12px;
}

#chat-in-container {
  display: flex;
  justify-content: center;
  padding: 0px;
}

#chat-out {
  width: auto;
  height: 100%;
  overflow-y: scroll;
  margin-bottom: 24px;
}

.chat-item {
  padding: 3px;
  padding-left: 4px;
  font-size: 16px;
  word-wrap: break-word;
  line-height: 1.6;
}

.wap {
  display: inline-block;
  text-align: center;
  height: 0.1em;
  width: 1.9em;
  position: relative;
}

.emote {
  display: inline;
  height: 1.9em;
  width: auto;
  /*text-align: center;*/
  position: absolute;
  bottom: -0.6em;
  left: 0em;
}

#chat {
  display: flex;
  width: 100%;
}

#chat-in {
  width: 100%;
  height: 32px;
  padding-left: 8px;
  font-size: 14px;
  background-color: #EEE;
  border: solid 1px #DDD;
  border-radius: 4px;
  outline: none;
}

#chat-in:focus {
  border: solid 1px #6c0f96;
}

#join-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 100%;
}

#join-box {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  padding: 50px 0px 30px 0px;
  border: 1px solid #DDDDDD;
  border-radius: 24px;
  width: 350px;
  height: 200px;
  box-shadow: 4px 15px 17px #EEEEEE;
}

@media (orientation: portrait) {
  #room-container {
    background-color: #555;
  }

  .chat-item {
    color: #DDD;
  }

  .chat-item>strong {
    color: #492378;
  }

  #chat-container {
    border: none;
    border-radius: 6px;
    background-color: #666;
  }

  #chat-in {
    background-color: #888;
    border-color: #777;
  }

  #chat-in::placeholder {
    color: #555;
  }

  #window-container {
    width: 100%;
    height: 100%;
    flex-direction: column;
    padding: 0px;
  }

  #video-container {
    width: 100%;
    margin: 0px;
  }

  #chat-container {
    width: 90%;
    height: 100%;
    min-height: 100%;
    margin: 2.5%;
  }

  #banner, #share {
    font-size: 2.3vw;
  }

  #logo {
    width: 64px;
    height: 48px;
  }
}

